test/error/parser/struct-missing-colon-fn.dsk
let S = struct
    foo (x: int) -> void
        return
    end
end
